--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/admin_toolbar": "^1.20",
         "drupal/console": "^1.0.1",
         "drupal/core": "~8.0",
+        "drupal/drupal8_zymphonies_theme": "^1.0",
         "drupal/google_analytics": "^2.0",
         "drupal/pathauto": "^1.0",
         "drush/drush": "~8.0",
@@ -30,6 +32,7 @@
     "require-dev": {
         "behat/mink": "~1.7",
         "behat/mink-goutte-driver": "~1.2",
+        "drupal/devel": "^1.2",
         "jcalderonzumba/gastonjs": "~1.0.2",
         "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsstream": "~1.2",
